--- a/blog.html
+++ b/blog.html
@@ -53,15 +53,14 @@
 		<ul class="main-menu">
 			<li><a href="index.html">Home</a></li>
 			<li><a href="gallery.html">Gallery</a></li>
-			<li><a href="blog.html" class="active">Blog</a></li>
-			<li><a href="about.html">About</a></li>
+			<li><a href="blog.html" class="active">Download</a></li>
+			
 			<li><a href="contact.html">Contact</a></li>
 		</ul>
 		<div class="menu-footer">
 			<div class="footer-social">
-				<a href="#">Facebook</a>
-				<a href="#">Twitter</a>
-				<a href="#">Instagram</a>
+			<a href="https://www.youtube.com/channel/UC9rIsir387gKVoaXCGwiWag">You Tube</a>
+			<a href="https://www.instagram.com/photo_factory.click/">Instagram</a>
 			</div>
 			<div class="copyright"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
   Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
@@ -105,7 +104,7 @@
 	<!-- Footer section -->
 	<footer class="footer-section">
 		<div class="footer-social">
-			<a href="#">Facebook</a>
+			<!--<a href="#">Facebook</a-->
 			<a href="https://www.youtube.com/channel/UC9rIsir387gKVoaXCGwiWag">You Tube</a>
 			<a href="https://www.instagram.com/photo_factory.click/">Instagram</a>
 		</div>
