--- a/gallery.html
+++ b/gallery.html
@@ -31,8 +31,8 @@
 	<!-- Offcanvas Menu Section -->
 	<div class="offcanvas-menu-wrapper">
 		<div class="menu-header">
-			<a href="./index.html" class="site-logo">
-				<img src="img/logo.png" alt="">
+			<a href="https://www.instagram.com/photo_factory.click/" class="site-logo">
+				<img src="img/1.png" alt="" style="height: 50px;">
 			</a>
 			<div class="menu-switch" id="menu-canvas-close">
 				<i class="icon_close"></i>
@@ -41,15 +41,14 @@
 		<ul class="main-menu">
 			<li><a href="index.html">Home</a></li>
 			<li><a href="gallery.html" class="active">Gallery</a></li>
-			<li><a href="blog.html">Blog</a></li>
-			<li><a href="about.html">About</a></li>
+			<li><a href="blog.html">Download</a></li>
+			
 			<li><a href="contact.html">Contact</a></li>
 		</ul>
 		<div class="menu-footer">
 			<div class="footer-social">
-				<a href="#">Facebook</a>
-				<a href="#">Twitter</a>
-				<a href="#">Instagram</a>
+			<a href="https://www.youtube.com/channel/UC9rIsir387gKVoaXCGwiWag">You Tube</a>
+			<a href="https://www.instagram.com/photo_factory.click/">Instagram</a>
 			</div>
 			<div class="copyright"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
   Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
@@ -60,9 +59,9 @@
 	
 	<!-- Header section -->
 	<header class="header-section">
-		<a href="./index.html" class="site-logo">
-			<img src="img/logo.png" alt="">
-		</a>
+		<a href="https://www.instagram.com/photo_factory.click/" class="site-logo">
+				<img src="img/1.png" alt="" style="height: 50px;">
+			</a>
 		<div class="menu-switch" id="menu-canvas-show">
 			<i class="icon_menu"></i>
 		</div>
@@ -378,9 +377,8 @@
 	<!-- Footer section -->
 	<footer class="footer-section">
 		<div class="footer-social">
-			<a href="#">Facebook</a>
-			<a href="#">Twitter</a>
-			<a href="#">Instagram</a>
+			<a href="https://www.youtube.com/channel/UC9rIsir387gKVoaXCGwiWag">You Tube</a>
+			<a href="https://www.instagram.com/photo_factory.click/">Instagram</a>
 		</div>
 		<div class="copyright"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
   Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
