--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,13 @@
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	<![endif]-->
+<style>
+	.aboutus{
+  margin-top: 0%;
+  
+ margin-left: 0.5%;
+}
+</style>
 
 </head>
 <body>
@@ -29,8 +36,8 @@
 	<!-- Offcanvas Menu Section -->
 	<div class="offcanvas-menu-wrapper">
 		<div class="menu-header">
-			<a href="./index.html" class="site-logo">
-				<img src="img/logo.png" alt="">
+			<a href="https://www.instagram.com/photo_factory.click/" class="site-logo">
+				<img src="img/1.png" alt="" style="height: 50px;">
 			</a>
 			<div class="menu-switch" id="menu-canvas-close">
 				<i class="icon_close"></i>
@@ -39,15 +46,14 @@
 		<ul class="main-menu">
 			<li><a href="index.html">Home</a></li>
 			<li><a href="gallery.html">Gallery</a></li>
-			<li><a href="blog.html">Blog</a></li>
-			<li><a href="about.html">About</a></li>
+			<li><a href="blog.html">Download</a></li>
+			
 			<li><a href="contact.html" class="active">Contact</a></li>
 		</ul>
 		<div class="menu-footer">
 			<div class="footer-social">
-				<a href="#">Facebook</a>
-				<a href="#">Twitter</a>
-				<a href="#">Instagram</a>
+				<a href="https://www.youtube.com/channel/UC9rIsir387gKVoaXCGwiWag">You Tube</a>
+			<a href="https://www.instagram.com/photo_factory.click/">Instagram</a>
 			</div>
 			<div class="copyright"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
   Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
@@ -58,9 +64,9 @@
 	
 	<!-- Header section -->
 	<header class="header-section">
-		<a href="./index.html" class="site-logo">
-			<img src="img/logo.png" alt="">
-		</a>
+		<a href="https://www.instagram.com/photo_factory.click/" class="site-logo">
+				<img src="img/1.png" alt="" style="height: 50px;">
+			</a>
 		<div class="menu-switch" id="menu-canvas-show">
 			<i class="icon_menu"></i>
 		</div>
@@ -71,41 +77,31 @@
 	<section class="contact-section">
 		<div class="contact-warp set-bg" data-setbg="img/blog/big.jpg">
 			<div class="container">
-				<div class="row">
-					<div class="col-lg-5">
-						<div class="contact-info">
-							<h4>Information</h4>
-							<div class="ci-item"><i class="icon_phone"></i>(12)-100-100-100</div>
-							<div class="ci-item"><i class="icon_mail"></i>Info.colorlib@gmail.com</div>
-						</div>
-						<div class="contact-info">
-							<h4>Address</h4>
-							<div class="ci-item"><i class="icon_pin"></i>Iris Watson, Mary land, United State, New York City</div>
-						</div>
-					</div>
-					<div class="col-lg-7">
-						<form class="contact-form">
-							<label for="y-name">Your Name:</label>
-							<input type="text" id="y-name">
-							<label for="y-email">Email Address:</label>
-							<input type="text" id="y-email">
-							<label for="y-msg">Leave A Message:</label>
-							<textarea id="y-msg"></textarea>
-							<button class="site-btn">Send Us Now</button>
-						</form>
-					</div>
-				</div>
+				<div class="aboutus">
+<p style="margin-top:30px;"><img src="b1.png" height=30px width=30px><font color="white" style="font-size: 20px" >-<a href="https://www.instagram.com/dh_patel_147/" style="text-decoration: none; margin-left: 10px">   Dev Hadvani</a></td>
+</font></p>
+
+<p style="margin-top: 30px;"><img src="b1.png" height=30px width=30px><font color="white" style="font-size: 20px" >-<a href="https://www.instagram.com/photo_factory.click/" style="text-decoration: none; margin-left: 10px; ">   Photo Factory click</a>
+</font></p>
+
+<p style="margin-top: 30px;"><img src="wa.png" height=35px width=35px><font color="white" style="font-size: 18px; margin-left: 10px; margin-top: 300p" > +919106348837</font></p>
+
+<p style="margin-top: 30px;"><img src="gm.png" height=35px width=35px><font color="white" style="font-size: 16px; margin-left: 10px" > photofactory.click@gmail.com</font></p>
+
+<p style="margin-top: 30px;"><img src="ph.png" height=40px width=40px><font color="white" style="font-size: 18px; margin-left: 10px" >8000550360 / 9106348837</font></p>
+</div>
+
 			</div>
-		</div>
-	</section>
+		</div-->
+		
+ 	</section>
 	<!-- Contact section end -->
 
 	<!-- Footer section -->
 	<footer class="footer-section">
 		<div class="footer-social">
-			<a href="#">Facebook</a>
-			<a href="#">Twitter</a>
-			<a href="#">Instagram</a>
+			<a href="https://www.youtube.com/channel/UC9rIsir387gKVoaXCGwiWag">You Tube</a>
+			<a href="https://www.instagram.com/photo_factory.click/">Instagram</a>
 		</div>
 		<div class="copyright"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
   Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
