--- a/index.html
+++ b/index.html
@@ -41,15 +41,14 @@
 		<ul class="main-menu">
 			<li><a href="index.html" class="active">Home</a></li>
 			<li><a href="gallery.html">Gallery</a></li>
-			<li><a href="blog.html">Blog</a></li>
-			<li><a href="about.html">About</a></li>
+			<li><a href="blog.html">Download</a></li>
+			
 			<li><a href="contact.html">Contact</a></li>
 		</ul>
 		<div class="menu-footer">
 			<div class="footer-social">
-				<a href="#">Facebook</a>
-				<a href="#">Twitter</a>
-				<a href="#">Instagram</a>
+			<a href="https://www.youtube.com/channel/UC9rIsir387gKVoaXCGwiWag">You Tube</a>
+			<a href="https://www.instagram.com/photo_factory.click/">Instagram</a>
 			</div>
 			<div class="copyright"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
   Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
@@ -95,7 +94,7 @@
 					<div class="ht-cata">Nature</div>
 					<h2>Photo Factory Click</h2>
 					<p>"We Share Happiness by Our Art"</p>
-					<a href="#" class="ht-btn">See More <i class="arrow_right"></i></a>
+					<a href="gallery.html" class="ht-btn">See More <i class="arrow_right"></i></a>
 				</div>
 				<div class="hi-bg set-bg" data-setbg="img/s3.jpg"></div>
 			</div>
@@ -106,9 +105,8 @@
 	<!-- Footer section -->
 	<footer class="footer-section">
 		<div class="footer-social">
-			<a href="#">Facebook</a>
-			<a href="#">Twitter</a>
-			<a href="#">Instagram</a>
+		<a href="https://www.youtube.com/channel/UC9rIsir387gKVoaXCGwiWag">You Tube</a>
+			<a href="https://www.instagram.com/photo_factory.click/">Instagram</a>
 		</div>
 		<div class="copyright"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
   Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
