--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Cassi | Photo Studio HTML Template</title>
+	<title>Photo Factory Click</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="Cassi Photo Studio HTML Template">
 	<meta name="keywords" content="photo, html">
