--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 					<div class="ht-cata">Nature</div>
 					<h2>Photo Factory Click</h2>
 					<p>"We Share Happiness by Our Art"</p>
-					<a href="#" class="ht-btn">See More <i class="arrow_right"></i></a>
+					<a href="gallery.html" class="ht-btn">See More <i class="arrow_right"></i></a>
 				</div>
 				<div class="hi-bg set-bg" data-setbg="img/s1.jpg"></div>
 			</div>
@@ -85,7 +85,7 @@
 					<div class="ht-cata">Nature</div>
 					<h2>Photo Factory Click</h2>
 					<p>"We Share Happiness by Our Art"</p>
-					<a href="#" class="ht-btn">See More <i class="arrow_right"></i></a>
+					<a href="gallery.html" class="ht-btn">See More <i class="arrow_right"></i></a>
 				</div>
 				<div class="hi-bg set-bg" data-setbg="img/s2.jpg"></div>
 			</div>
