--- a/blog.html
+++ b/blog.html
@@ -35,10 +35,10 @@
 
 </head>
 <body>
-	<!-- Page Preloder -->
+	<!-- Page Preloder --
 	<div id="preloder">
 		<div class="loader"></div>
-	</div>
+	</div>-->
 
 	<!-- Offcanvas Menu Section -->
 	<div class="offcanvas-menu-wrapper">
